--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -43,27 +43,27 @@
       <tbody>
         <tr>
           <td>Q2 2013</td>
-          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q2').for_city(params[:search]).sum('funding_amount')) %></td>
-          <td> <%= Funding.quarterly_fundings(Time.now().year, 'q2').for_city(params[:search]).count %></td>
-          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q2').for_city(params[:search]).average('funding_amount')) %></td>
+          <td class="currency"> <%= format_mil(@fundings_q2.sum('funding_amount')) %></td>
+          <td> <%= @fundings_q2.count %></td>
+          <td class="currency"> <%= format_mil(@fundings_q2.average('funding_amount')) %></td>
         </tr>
         <tr>
           <td>Q1 2013</td>
-          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q1').for_city(params[:search]).sum('funding_amount')) %></td>
-          <td> <%= Funding.quarterly_fundings(Time.now().year, 'q1').for_city(params[:search]).count %></td>
-          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q1').for_city(params[:search]).average('funding_amount')) %></td>
+          <td class="currency"> <%= format_mil(@fundings_q1.sum('funding_amount')) %></td>
+          <td> <%= @fundings_q1.count %></td>
+          <td class="currency"> <%= format_mil(@fundings_q1.average('funding_amount')) %></td>
         </tr>
         <tr>
           <td>Q4 2012</td>
-          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q4').for_city(params[:search]).sum('funding_amount')) %></td>
-          <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q4').for_city(params[:search]).count %></td>
-          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q4').for_city(params[:search]).average('funding_amount')) %></td>
+          <td class="currency"> <%= format_mil(@fundings_q4.sum('funding_amount')) %></td>
+          <td> <%= @fundings_q4.count %></td>
+          <td class="currency"> <%= format_mil(@fundings_q4.average('funding_amount')) %></td>
         </tr>
         <tr>
           <td>Q3 2012</td>
-          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q3').for_city(params[:search]).sum('funding_amount')) %></td>
-          <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q3').for_city(params[:search]).count %></td>
-          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q3').for_city(params[:search]).average('funding_amount')) %></td>
+          <td class="currency"> <%= format_mil(@fundings_q3.sum('funding_amount')) %></td>
+          <td> <%= @fundings_q3.count %></td>
+          <td class="currency"> <%= format_mil(@fundings_q3.average('funding_amount')) %></td>
         </tr>
       </tbody>
       <tfoot>
@@ -78,7 +78,7 @@
   <div class="grid_12">
     <br>
     <h3 class="center">LTM Funding by Industry</h3>
-    <%= render :partial => "location_donut", locals: { fundings: Funding.ltm_fundings(365).for_city(params[:search]) } %>
+    <%= render :partial => "location_donut", locals: { fundings: @fundings.for_city(params[:search]) } %>
   </div>
 </section>
 
@@ -97,75 +97,75 @@
       <tbody>
         <tr>
           <td>Seed</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('seed').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('seed').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('seed').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@seed_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @seed_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@seed_funding.average('funding_amount') ) %></td>
         </tr>
         <tr>
           <td>Angel</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('angel').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('angel').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('angel').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@angel_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @angel_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@angel_funding.average('funding_amount') ) %></td>
         </tr>
         <tr>
           <td>Series A</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('a').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('a').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('a').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@a_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @a_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@a_funding.average('funding_amount') ) %></td>
         </tr>
         <tr>
           <td>Series B</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('b').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('b').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('b').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@b_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @b_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@b_funding.average('funding_amount') ) %></td>
         </tr>
         <tr>
           <td>Series C</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('c').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('c').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('c').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@c_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @c_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@c_funding.average('funding_amount') ) %></td>
         </tr>
         <tr>
           <td>Series D</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('d').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('d').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('d').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@d_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @d_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@d_funding.average('funding_amount') ) %></td>
         </tr>
         <tr>
           <td>Series E</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('e').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('e').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('e').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@e_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @e_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@e_funding.average('funding_amount') ) %></td>
         </tr>
         <tr>
           <td>Series F</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('f').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('f').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('f').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@f_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @f_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@f_funding.average('funding_amount') ) %></td>
         </tr>
         <tr>
           <td>Series G</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('g').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('g').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('g').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@g_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @g_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@g_funding.average('funding_amount') ) %></td>
         </tr>
         <tr>
           <td>Venture Round**</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('venture_round').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('venture_round').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('venture_round').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@venture_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @venture_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@venture_funding.average('funding_amount') ) %></td>
         </tr>
         <tr>
           <td>Private Equity</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('private_equity').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('private_equity').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('private_equity').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@private_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @private_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@private_funding.average('funding_amount') ) %></td>
         </tr>
         <tr>
           <td>Debt Round</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('debt_round').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('debt_round').for_city(params[:search]).ltm_fundings(365).count %></td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('debt_round').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+          <td class="currency"> <%=  format_mil(@debt_funding.sum('funding_amount') ) %></td>
+          <td> <%=  @debt_funding.count %></td>
+          <td class="currency"> <%=  format_mil(@debt_funding.average('funding_amount') ) %></td>
         </tr>
       </tbody>
       <tfoot>
@@ -182,7 +182,7 @@
   <div class="grid_12">
     <br>
     <h3 class="center">LTM Funding by Month</h3>
-      <%= render :partial => "location_bar", locals: { fundings: Funding.for_city(params[:search]) } %>
+      <%= render :partial => "location_bar", locals: { fundings: @fundings.for_city(params[:search]) } %>
       <p class="footnote"><em>*Millions of dollars</em></p>
   </div>
 </section>
