Cleaned up views, nav, footer, refactored code, getting ready for production

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -2,7 +2,7 @@
     <h3 class= "container">Listing companies</h1>
 </div>
 <section class="container">
-  <h5>Need to add a scope for investments to find company id through funding.  E.g code that doesnt work but needs similar logic:  unless Investment.where(Funding.find_by_id(funding_id).company_id: @company.id)</h5>
+  <!-- TODO - Need to add a scope for investments to find company id through funding.  E.g code that doesnt work but needs similar logic:  unless Investment.where(Funding.find_by_id(funding_id).company_id: @company.id) -->
   <table class= "sortable">
     <thead>
       <tr>
