--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,15 @@
         <header>
           <div class="container group">
             <a href="<%= home_url %>">
-              <h1 class="grid_8">crunch<span class="bling">stats</span><span class="footnote tag">alpha</span></h1>
+              <h1 class="grid_8">crunch<span class="bling">stats </span><span class="footnote tag">alpha</span></h1>
             </a>
             <nav class="home_nav">
               <ul>
-               <li><%= link_to "Funding Overview", fundings_url %></li>
-               <li><%= link_to "Industry Funding", "/industries" %></li>
-               <li><%= link_to "Geographic Funding", "/locations" %></li>
-               <li><%= link_to "Angel Investing", "/individuals" %></li>
-               <li><%= link_to "About", "/individuals" %></li>
+                <li><%= link_to "Funding Overview", fundings_url %></li>
+                <li><%= link_to "Industries", industries_url %></li>
+                <li><%= link_to "Geographies", locations_url %></li>
+                <li><%= link_to "Angel Investing", individuals_url %></li>
+                <li><%= link_to "Contact", contact_url %></li>
               </ul>
             </nav>
           </div>
@@ -43,26 +43,23 @@
         <div class="grid_4">
           <h5>Site Map</h5>
           <ul>
-           <li><%= link_to "Home", root_url %></li>
-           <li><%= link_to "Industries", "/industries" %></li>
-           <li><%= link_to "Companies", companies_url %></li>
-           <li><%= link_to "Financials", financials_url %></li>
-           <li><%= link_to "Individuals", "/individuals" %></li>
-           <li><%= link_to "Fundings", fundings_url %></li>
-           <li><%= link_to "Locations", "/locations" %></li>
+            <li><%= link_to "Funding Overview", fundings_url %></li>
+            <li><%= link_to "Industries", industries_url %></li>
+            <li><%= link_to "Geographies", locations_url %></li>
+            <li><%= link_to "Angel Investing", individuals_url %></li>
           </ul>
         </div>
         <div class="grid_4">
           <h5>About</h5>
           <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Privacy Policy</a></li>
             <li><%= link_to "Contact", contact_url %></li>
+            <li><%= link_to "FAQ", faq_url %></li>
+            <li><%= link_to "About", about_url %></li>
           </ul>
         </div>
       </div>
       <div class="sub_footer">
-        <p>&copy; Copyright Cash Money Developers and Design Group 2013. All rights reserved.</p>
+        <p>&copy; Copyright CrunchStats 2013. All rights reserved.</p>
       </div>
     </footer>
   </body>
