--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,9 +7,7 @@
       <h2>Startup Funding Statistics</h2>
       <p>CrunchStats is a statistical dashboard providing realtime
       information compliled from Crunchbase on startup funding, angel investing, venture capital and everything in-between</p>
-
       <br>
-      <button>Get Started</button>
       <p>&nbsp;</p>
     </div>
   </div>
@@ -22,11 +20,11 @@
         <img src="assets/wing.svg">
         <h4>ANGEL INVESTING</h4>
       </a>
-      <a href=<%=companies_url%>>
+      <a href=<%= fundings_url %>>
         <img src="assets/rocket.svg">
         <h4>STARTUP FUNDING</h4>
       </a>
-      <a href=<%=financials_url%>>
+      <a href=<%= locations_url %>>
         <img src="assets/us_map.svg">
         <br>
         <h4>GEOGRAPHIC BREAKDOWN</h4>
